--- a/views/users/sign_up_form.pug
+++ b/views/users/sign_up_form.pug
@@ -1,30 +1,23 @@
 extends ../../views/layout
 
 block content
-  div.container
-    h1=title
-
-    form.form-horizontal(method='POST' action='')
-      div.form-group
-        label.control-label.col-sm-2(for='user_name') User Name:
-        div.col-xs-3  
-          input#user_name.form-control(type='text' placeholder='user name (Christian)' name='user_name' value=(undefined===user ? '' : user.user_name) )
-      .form-group
-        label.control-label.col-sm-2(for='family_name') Email:
-        div.col-xs-3  
-          input#email.form-control(type='text' placeholder='Email' name='email'  value=(undefined===user ? '' : user.email))
-      .form-group
-        label.control-label.col-sm-2(for='password') password :
-        div.col-xs-3 
-          input#password.form-control(type='password' placeholder='pass' name='password')
-      .form-group
-        label.control-label.col-sm-2(for='confirm-password') confirm password :
-        div.col-xs-3
-          input#confirm-password.form-control(type='password' placeholder='pass' name='confirm-password')
-      .form-group
-        div.col-sm-offset-2.col-sm-10 
-          button.btn.btn-primary(type='submit') Submit
-    if errors 
-      ul
-        for error in errors
-          li!= error.msg
+  .row
+    .col-md-12
+      .main-card.mb-3.card
+        .card-body
+          h5.card-title= title
+          form(method='POST' action='')
+            include ../shared/_errors
+            .position-relative.form-group
+              label(for='user_name') User name:
+              input#user_name.form-control(type='text', placeholder='user name (Christian)' name='user_name' required='true' value=(undefined===user ? '' : user.user_name) )
+            .position-relative.form-group
+              label(for='email') Email
+              input#email.form-control(name='email', placeholder='Email', type='email' required='true' value=(undefined===user ? '' : user.email))
+            .position-relative.form-group
+              label(for='password') Password
+              input#password.form-control(name='password', placeholder='*******', type='password')
+            .position-relative.form-group  
+              label(for='confirm-password') confirm password :
+              input#confirm-password.form-control(type='password' placeholder='******' name='confirm-password')
+            button.mt-1.btn.btn-primary Submit
